--- a/apps/templates/base.html
+++ b/apps/templates/base.html
@@ -1,5 +1,6 @@
 {% load static i18n %}<!DOCTYPE html>
 {% load menu_tags %}
+{% load sass_tags %}
 <html lang="en">
   <head>
     <meta charset="utf-8">
@@ -60,7 +61,7 @@
     {% block css %}
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/uikit/3.0.0-rc.20/css/uikit.min.css" />
     <link href="{% static 'css/selectize.css' %}" rel="stylesheet">
-    <link href="{% static 'css/project.css' %}" rel="stylesheet">
+    <link type="text/css" href="{% sass_src 'css/project.scss' %}" rel="stylesheet">
     <style>
       {{ css }}
     </style>
