--- a/apps/templates/footer.html
+++ b/apps/templates/footer.html
@@ -1,5 +1,5 @@
-<footer class="uk-margin uk-navbar-nav">
-  <div class="uk-navbar-left">
+<footer class="uk-grid">
+  <div class="uk-width-1-1">
     <ul class="rx-footer uk-padding-remove">
       <a href="http://digitalscholarship.emory.edu/" target="_blank" alt="Emory Center for Digital Scholarship">
         <li>Emory Center for Digital Scholarship</li>
@@ -15,7 +15,7 @@
       </a> -->
     </ul>
   </div>
-  <div class="uk-navbar-right">
+  <div class="uk-width-1-1">
     <ul class="rx-footer uk-padding-remove">
       <a href="http://digitalscholarship.emory.edu/projects/software/readux.html" target="_blank" alt="Readux by Emory Center for Digital Scholarship">
         <li>Readux 2.0</li>
