--- a/apps/static/css/project.css
+++ b/apps/static/css/project.css
@@ -144,7 +144,7 @@ a.rdx-provider-button:hover {
 
 .uk-button-primary:hover,
 .uk-button-primary:active {
-  background-color: #950952;
+  background-color: #510029;
 }
 
 .uk-button-default {
@@ -680,9 +680,7 @@ a:hover {
 
 .rx-offcanvas-bar {
   background: white;
-  width: 750px;
   box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
-
 }
 
 
@@ -803,24 +801,17 @@ p {
   line-height: 1.5;
 }
 
-.rx-article {
-  display: flex;
-  align-items: stretch;
-  flex: 1 1 auto;
-  max-width: 680px;
-  width: 100%;
-  margin: 3rem 0;
-}
+
 
 .rx-card-body {
   text-align: left;
   min-width: 0;
   flex: 1 1 auto;
-  margin-left: 2rem;
+  /* margin-left: 2rem; */
 }
 
 .rx-card-image-container {
-  width: 150px;
+  /* width: 150px; */
   flex: 0 0 auto;
 }
 
@@ -870,16 +861,6 @@ p {
   background: white;
 }
 
-.rx-splash {
-  /* position: fixed; */
-  display: flex;
-  flex-direction: column;
-  align-self: flex-start;
-  position: sticky;
-  top: 0;
-  justify-content: space-between;
-  height: calc(100vh - 200px);
-}
 
 .rx-grid-right {
   margin-left: 50%;
@@ -893,8 +874,8 @@ p {
 
 .rx-btn {
   border-radius: 3px;
-  border: solid 1px #950952;
-  color: #950952;
+  border: solid 1px #950953;
+  color: #950953;
   font-family: HelveticaNeue, Helvetica, -apple-system, BlinkMacSystemFont,
     "Segoe UI", Roboto, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji",
     "Segoe UI Symbol";
@@ -908,9 +889,9 @@ p {
 }
 
 .rx-btn:hover {
-  border: solid 1px #950952;
+  border: solid 1px #950953;
   color: white;
-  background: #950952;
+  background: #950953;
   transition: all ease-in-out 100ms;
 
   cursor: pointer;
@@ -918,7 +899,7 @@ p {
 
 .rx-btn-extension {
   border-radius: 3px;
-  border: solid 1px #950952;
+  border: solid 1px #950953;
   color: white;
   font-family: HelveticaNeue, Helvetica, -apple-system, BlinkMacSystemFont,
     "Segoe UI", Roboto, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji",
@@ -1010,8 +991,8 @@ p {
 }
 
 .rx-label-copy:active {
-  background-color: #c0660d !important;
-  border: 1px solid #c0660d !important;
+  background-color: #510029 !important;
+  border: 1px solid #510029 !important;
   opacity: 1;
 }
 
@@ -1029,6 +1010,10 @@ p {
   cursor: pointer;
   transition: all ease-in-out 100ms;
   font-weight: 600;
+}
+
+.rx-page-navbar-right > a {
+  margin-left: 1em;
 }
 
 .rx-label-copy:hover {
@@ -1315,7 +1300,7 @@ em {
 }
 
 .rx-page-info-btn, .rx-btn-secondary, .rx-page-info-btn > .uk-icon-button {
-  color: #950952 !important;
+  color: #950953 !important;
   opacity: 0.75;
   font-size: 1rem;
   font-weight: 600;
@@ -1329,22 +1314,22 @@ em {
   position: relative;
   top: 0;
   right: 0;
-  color: #950952 !important;
+  color: #950953 !important;
 }
 
 .rx-offcanvas-close:hover {
-  color: #950952 !important;
+  color: #950953 !important;
 }
 
 .rx-btn-secondary {
-  border: 3px solid #950952;
+  border: 3px solid #950953;
   padding: .35em 1em;
   white-space: nowrap;
 }
 
 .rx-btn-secondary:hover {
   color: white;
-  background-color: #950952;
+  background-color: #950953;
   opacity: 1;
   transition: all ease-in-out 100ms;
 }
@@ -1352,12 +1337,12 @@ em {
 .rx-page-info-btn:hover {
   opacity: 1;
   transition: all ease-in-out 100ms;
-  color: #950952;
+  color: #950953;
 }
 
 .rx-btn-secondary:active {
-  background-color: #e37c12;
-  border-color: #e37c12;
+  background-color: #510029;
+  border-color: #510029;
 }
 
 @media (max-width: 750px) {
@@ -1436,4 +1421,124 @@ fieldset {
   margin: inherit;
   border: 0;
   padding: inherit;
+}
+
+@media (max-width: 639px) {
+  .rx-offcanvas-bar {
+    width: 100%;
+  }
+  #offcanvas-usage {
+    width: 100%;
+  }
+}
+
+@media (min-width: 640px) {
+  .rx-splash {
+    /* position: fixed; */
+    display: flex;
+    flex-direction: column;
+    align-self: flex-start;
+    position: sticky;
+    top: 0;
+    justify-content: space-between;
+    height: calc(100vh - 200px);
+  }
+
+  .rx-offcanvas-bar {
+    width: 100%;
+  }
+
+  #offcanvas-usage {
+    width: 50%;
+  }
+}
+
+@media (min-width: 960px) {
+  .rx-article {
+    display: flex;
+    align-items: stretch;
+    /* flex: 1 1 auto; */
+    max-width: 680px;
+    width: 100%;
+    margin: 3rem 0;
+  }
+
+  .rx-article > .rx-card-image-container {
+    padding: 0;
+  }
+
+  .uk-navbar-right {
+    flex-wrap: initial;
+  }
+}
+
+.uk-navbar-right {
+  padding-top: 1rem;
+}
+
+@media (max-width: 750px) {
+  .rx-btn-secondary {
+    border: none;
+    padding: none;
+    white-space: inherit;
+    margin-left: -1rem !important;
+  }
+
+  .rx-page-breadcrumb {
+    display: block;
+    white-space: normal;
+  }
+
+  .rx-page-title {
+    line-height: 1rem;
+  }
+}
+
+@media (max-width: 959px) and (min-width: 320px) {
+  .readux-home-ecds {
+    display: none;
+  }
+
+  .readux-group-title {
+    font-size: 1.5rem;
+  }
+
+  .rx-splash-item {
+    font-size: 1.5rem;
+  }
+
+  .rx-title-image {
+    object-fit: cover;
+    height: 100%;
+    width: 100%;
+  }
+
+  .rx-card-image-container {
+    height: 100px;
+    width: 100%;
+  }
+
+  .rx-card-body {
+    margin: 1rem 0 2rem 0;
+  }
+
+  .rx-card-title {
+    overflow: inherit;
+    display: block;
+  }
+
+  .rx-card-text {
+    overflow: inherit;
+    display: block;
+  }
+
+  .rx-footer > a {
+    padding: 0 0 1rem 0;
+  }
+
+  footer {
+    padding: 2rem 0 0 0 !important;
+  }
+
+
 }
