--- a/apps/templates/cms/home_page.html
+++ b/apps/templates/cms/home_page.html
@@ -4,7 +4,7 @@
 {% load wagtailcore_tags %}
 
 {% block content %}
-<div class="uk-child-width-expand@s uk-margin-large-top" uk-grid>
+<div class="uk-child-width-expand@s" uk-grid>
 
   <div class="rx-splash">
     <ul class="readux-home-tagline uk-padding-remove-left rx-splash-item">
@@ -25,13 +25,14 @@
     <ul class="uk-padding-remove-left">
       {% for collection in page.featured_collections.all|order_by:page.featured_collections_sort_order %}
       <li>
-        <article class="rx-article">
-          <div class="rx-card-image-container uk-width-1-4@m">
+        <article class="uk-grid rx-article">
+          <div class="rx-card-image-container uk-width-1-1 uk-width-1-4@m">
             <a alt="Thumbnail image for collection {{collection.label}}" class="rx-card-image"
-              href="{% url 'collection' collection.pid %}"
-              style="background-image: url('/media/{{collection.thumbnail}}'); // background-position: 77% 52% !important;"></a>
+              href="{% url 'collection' collection.pid %}">
+              <img class="rx-title-image" src="/media/{{collection.thumbnail}}">
+            </a>
           </div>
-          <div class="rx-card-body uk-width-3-4@m">
+          <div class="rx-card-body uk-width-1-1 uk-width-3-4@m">
             <a class="nav-link" href="{% url 'collection' collection.pid %}">
               <h3 class="rx-card-title uk-margin-remove-bottom">{{ collection.label }}</h3>
               <div class="rx-title-tagline">{{collection.manifests.all|length}}
@@ -55,8 +56,8 @@
     <div class="readux-group-title">Featured Volume{{page.featured_volumes.all|length|pluralize}}</div>
     {% for volume in page.featured_volumes.all|order_by:page.featured_volumes_sort_order %}
     <li>
-      <article class="rx-article">
-        <div class="rx-card-image-container uk-width-1-4@m">
+      <article class="uk-grid rx-article">
+        <div class="rx-card-image-container uk-width-1-1 uk-width-1-4@m">
           <a alt="First page of {{volume.label}}" class="rx-card-image"
             href="{% url 'page' volume.pid volume.canvas_set.first.pid %}">
       {% for fir in firstthumbnail %}
@@ -78,7 +79,7 @@
       {% endfor %}
           </a>
         </div>
-        <div class="rx-card-body uk-width-3-4@m">
+        <div class="rx-card-body uk-width-1-1 uk-width-3-4@m">
           <a class="nav-link" href="{% url 'collection' volume.collections.first.pid %}">
             <div class="rx-btn rx-btn-collection">{{volume.collections.first.label}}</div>
           </a>
@@ -118,15 +119,15 @@
     {% if page.content_display == 'Collections' %}
     <div class="readux-group-title">All Collections</div>
 
-    <ul class="uk-padding-remove-left">
+    <ul>
       {% for collection in page.collections|slice:":8" %}
-      <li>
-        <article class="rx-article uk-width-1-4@m">
+      <li class="uk-grid">
+        <article class="rx-article uk-width-1-1">
           <div class="rx-card-image-container">
             <a alt="Banner image for collection {{collection.label}}" class="rx-card-image"
               style="background-image: url('https://127.0.0.1:3000/media/{{collection.header}}'); // background-position: 77% 52% !important;"></a>
           </div>
-          <div class="rx-card-body uk-width-3-4@m">
+          <div class="rx-card-body uk-width-3-1">
             <a class="nav-link" href="{% url 'collection' collection.pid %}">
               <h3 class="rx-card-title uk-margin-remove-bottom">{{ collection.label }}</h3>
               <div class="rx-title-tagline">{{collection.manifests.all|length}}
@@ -146,11 +147,11 @@
     {% for volume in page.volumes|slice:":8" %}
     {% if volume.canvas_set.first.pid is null %}
     <li>
-      <article class="rx-article">
-        <div class="uk-width-1-4@m">
+      <article class="uk-grid rx-article">
+        <div class="rx-card-image-container uk-width-1-1 uk-width-1-4@m">
           <v-volume-image></v-volume-image>
         </div>
-        <div class="rx-card-body uk-width-3-4@m">
+        <div class="rx-card-body uk-width-1-1 uk-width-3-4@m">
           <a class="nav-link" href="{% url 'collection' volume.collections.first.pid %}">
             <div class="rx-btn rx-btn-collection">{{volume.collections.first.label}}</div>
           </a>
@@ -170,8 +171,8 @@
 
     {% else %}
     <li>
-      <article class="rx-article">
-        <div class="rx-card-image-container uk-width-1-4@m">
+      <article class="uk-grid rx-article">
+        <div class="rx-card-image-container uk-width-1-1 uk-width-1-4@m">
           <a class="rx-card-image" href="{% url 'page' volume.pid volume.canvas_set.first.pid %}">
       {% for fir in firstthumbnail %}
       {% for canvas in volume.canvas_set.all %}
@@ -193,7 +194,7 @@
           </a>
 
         </div>
-        <div class="rx-card-body uk-width-3-4@m">
+        <div class="rx-card-body uk-width-1-1 uk-width-3-4@m">
           <a class="nav-link" href="{% url 'collection' volume.collections.first.pid %}">
             <div class="rx-btn rx-btn-collection">{{volume.collections.first.label}}</div>
           </a>
