--- a/apps/templates/collection.html
+++ b/apps/templates/collection.html
@@ -38,7 +38,7 @@
    {% for volume in volumes %}
   {% if volume.canvas_set.first.pid is null %}
       <div class="uk-width-1-2@m uk-grid-medium">
-        <div class=" uk-width-1-4@m rx-volume-na">
+        <div class=" uk-width-1-4@m">
           <a class="nav-link" href="#">
             <v-volume-image></v-volume-image>
           </a>
@@ -72,7 +72,7 @@
 
     {% else %}
     <div class="uk-width-1-2@m uk-grid-medium">
-      <div class=" uk-width-1-4@m rx-volume-image">
+      <div class=" uk-width-1-4@m">
         <a class="nav-link" href="{% url 'page' volume.pid volume.canvas_set.first.pid %}">
       {% for fir in firstthumbnail %}
       {% for canvas in volume.canvas_set.all %}
