--- a/apps/templates/base.html
+++ b/apps/templates/base.html
@@ -99,9 +99,9 @@
           <a class="uk-navbar-toggle uk-hidden@s" uk-toggle="target: #sidenav" uk-navbar-toggle-icon></a>
 
           <div id="sidenav" uk-offcanvas="" class="uk-offcanvas">
-            <div class="uk-offcanvas-bar">
+            <div class="uk-offcanvas-bar rx-offcanvas-base">
               <a class="uk-navbar-item uk-logo uk-padding-remove-left" href="/">
-                <img src="{% static 'images/readux-white.svg' %}" style="width: 50px; padding: 20px 0 0 0" alt="Readux">
+                <img src="{% static 'images/readux.svg' %}" style="width: 50px; padding: 20px 0 0 0" alt="Readux">
               </a>
               <ul class="uk-navbar-nav">
                 <li>
