--- a/apps/static/css/project.css
+++ b/apps/static/css/project.css
@@ -785,6 +785,9 @@ p {
 .rx-page-title-container {
   padding: 0 15px;
   overflow-wrap: anywhere;
+  -ms-flex-item-align: center;
+      -ms-grid-row-align: center;
+      align-self: center;
 }
 
 .rx-breadcrumb-item > a,
@@ -1682,5 +1685,37 @@ fieldset {
 
 #sidenav {
   background: white;
+}
+
+.flex-parent {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+      align-items: center;
+  padding: 10px;
+  margin: 30px 0;
+}
+
+.long-and-truncated {
+  -webkit-box-flex: 1;
+  -ms-flex: 1;
+      flex: 1;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+
+.short-and-fixed {
+  white-space: nowrap;
+}
+
+.short-and-fixed > div {
+  width: 30px;
+  height: 30px;
+  border-radius: 10px;
+  background: lightgreen;
+  display: inline-block;
 }
 /*# sourceMappingURL=project.css.map */
