remove scss phase 2

--- a/apps/static/css/project.css
+++ b/apps/static/css/project.css
@@ -166,25 +166,15 @@ header.page-header .container img {
   width: 100%;
 }
 
-h1 {
-  color: #737373;
-}
-
-h2 {
+h1, h2, h3, p.text-lead {
   color: #737373;
 }
 
 h3 {
   font-size: 2.2rem;
-  color: #737373;
-}
-
-p.text-lead {
-  color: #737373;
 }
 
 header#page-bg .collection-image-info {
-  float: right;
   display: inline-block;
   background: rgba(0, 0, 0, 0.62);
   position: absolute;
@@ -201,21 +191,6 @@ header#page-bg .collection-image-info {
   cursor: pointer;
 }
 
-/*
-header#page-bg .collection-label {
-    display: block;
-    background: rgba(0, 0, 0, 0.62);
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    padding: 0.7em 0.7em 0.3em 0.7em;
-    color: #DEDEDE;
-    max-width: 80%;
-    min-height: 25%;
-    max-height: 40%;
-}
- */
 header#page-bg .collection-label h1 {
   font-size: 3em;
   color: #dedede;
@@ -239,10 +214,6 @@ header#page-bg .collection-label h1 {
   display: flex;
 }
 
-.collectionswrapper > ul {
-  padding-left: 0;
-}
-
 ol {
   columns: 2;
   -webkit-columns: 2;
@@ -259,11 +230,6 @@ ul.listing-thumbs > li > img.thumbnail-image {
   height: 150px;
 }
 
-/*
-ol > li.list {
-  #height: 300px;
-}
- */
 ul > li > .collectionbox {
   width: 100%;
   padding-bottom: 15%;
@@ -329,34 +295,6 @@ span {
   width: 10px;
   font-size: 10px;
   text-align: center;
-}
-
-#grid {
-  display: -ms-grid;
-  display: grid;
-  -ms-grid-columns: 260px auto;
-      grid-template-columns: 260px auto;
-  height: 320px;
-  grid-auto-rows: 320px;
-}
-
-#grid-image {
-  display: -ms-grid;
-  display: grid;
-  margin-bottom: 10px;
-  -ms-grid-row-align: center;
-      align-self: center;
-}
-
-#grid-image-volume {
-  display: -ms-grid;
-  display: grid;
-  margin-bottom: 10px;
-}
-
-#grid-metaforimage {
-  display: -ms-grid;
-  display: grid;
 }
 
 .uk-container ul {
