--- a/apps/templates/cms/collections_page.html
+++ b/apps/templates/cms/collections_page.html
@@ -64,7 +64,7 @@
 
 
 {% if page.layout == 'List' %}
-<div class="collectionswrapper">
+<div class="collectionswrapper uk-padding-remove-left">
   <div class="uk-grid-match uk-child-width-expand@s uk-grid-large" uk-grid>
     {% for collection in page.collections %}
     <div class="uk-width-1-2@m uk-grid-medium">
