--- a/apps/static/css/project.scss
+++ b/apps/static/css/project.scss
@@ -737,7 +737,10 @@ p {
   color: white;
 }
 
-
+.uk-offcanvas {
+  top: -80px;
+  position: inherit;
+}
 
 .readux-group-title:not(:first-child) {
   margin-top: 3rem;
@@ -1278,6 +1281,7 @@ fieldset {
   }
   #offcanvas-usage {
     width: 100%;
+    left: 0;
   }
 }
 
@@ -1299,6 +1303,7 @@ fieldset {
 
   #offcanvas-usage {
     width: 50%;
+    left: 50%;
   }
 }
 
